<package>
  <name>rxbag_wrapper</name>
  <version>1.9.13</version>
  <description>
    A wrapper that builds (and installs) the rxbag, wxpython_swig_interface
    and rxbag_plugins packages.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>
  <license>BSD</license>  
  <license>Creative Commons</license>
  <license>wxWindows</license>  

  <url type="website">http://www.ros.org/wiki/rxbag</url>
  <author>Tim Field</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>wxpython_swig_interface</build_depend> -->
  <build_depend>wxwidgets</build_depend>

  <run_depend>python-gtk2</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>wxpython</run_depend>
  <!-- <run_depend>wxpython_swig_interface</run_depend> -->
  <run_depend>wxwidgets</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
